--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,47 @@
-/* GLOBAL */
+/* ---------- GLOBAL ---------- */
 body {
   font-family: "Raleway", sans-serif;
 }
 
 h1 {
   font-family: "Geostar", cursive;
+  color: gold;
   margin: 0 auto;
 }
 
-/* GRID APP */
+.container {
+  margin: 2rem auto 150px auto;
+  padding: 1rem;
+  max-width: 500px;
+  text-align: center;
+  background-color: red;
+  border-radius: 8%;
+}
+
+/* ---------- GRID APP ---------- */
 #grid {
-  max-width: 400px;
-  margin: 0 auto;
+  width: 400px;
+  margin: 1rem auto;
   background-color: gray;
 
   display: grid;
   column-gap: 0;
   grid-auto-rows: minmax(1fr, auto);
-  grid-template-columns: repeat(16, 1fr);
+
+  grid-template-columns: repeat(20, 1fr);
 }
 
 #grid div {
   margin: 0;
   padding: 0;
-  height: 25px;
-  width: 25px;
 }
 
-.red {
-  background-color: red;
+.square {
+  height: 20px;
+  width: 20px;
 }
 
-.clear {
-  /* background-color: blue; */
-  background-color: inherit;
-}
-
-/* FOOTER */
+/* ---------- FOOTER ---------- */
 .attributions {
   font-size: 0.6rem;
 }
