--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ h1 {
 #grid {
   width: 400px;
   margin: 1rem auto;
-  background-color: gray;
+  background-color: #c4c4c4;
 
   display: grid;
   column-gap: 0;
