--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,23 @@
 /* ---------- GLOBAL ---------- */
 body {
   font-family: "Raleway", sans-serif;
+  background-color: #fffef2;
 }
 
 h1 {
   font-family: "Geostar", cursive;
   color: gold;
   margin: 0 auto;
+  text-shadow: 1px 1px 1px gray, 0 0 0.2em #888;
 }
 
 .container {
-  margin: 2rem auto 150px auto;
+  margin: 3rem auto 2rem auto;
   padding: 1rem;
   max-width: 500px;
   text-align: center;
   background-color: red;
+  box-shadow: inset 0px 0px 3.5rem #555;
   border-radius: 8%;
 }
 
@@ -23,11 +26,10 @@ h1 {
   width: 400px;
   margin: 1rem auto;
   background-color: #c4c4c4;
-
+  box-shadow: 0px 0px 3.5rem #333;
   display: grid;
   column-gap: 0;
   grid-auto-rows: minmax(1fr, auto);
-
   grid-template-columns: repeat(20, 1fr);
 }
 
@@ -41,9 +43,122 @@ h1 {
   width: 20px;
 }
 
+/* ---------- CONTROLS ---------- */
+.controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: bold;
+  font-size: 0.85rem;
+}
+
+.controls:hover {
+  cursor: pointer;
+}
+
+.button {
+  color: #333;
+  background-color: white;
+  border: 1px solid rgb(195, 195, 195);
+  padding: 0.5rem 0.75rem;
+  margin: 0 0.1rem;
+}
+
+.button:hover {
+  background-color: gold;
+}
+
+.button:active {
+  background-color: rgb(179, 179, 179);
+}
+
+.knob {
+  background-color: white;
+  height: 70px;
+  width: 70px;
+  border: 3px solid rgb(224, 224, 224);
+  border-radius: 50%;
+  box-shadow: 0px 0px 1rem black;
+}
+
+.knob p {
+  margin-top: 1.6rem;
+  font-style: italic;
+  color: #888;
+}
+
+.knob:hover {
+  background-color: #ecebd7;
+}
+
+.knob:active {
+  background-color: rgb(179, 179, 179);
+}
+
+/* ---------- EXTRA CONTROLS ---------- */
+
+.extra {
+  font-weight: bold;
+  margin: 3rem auto 6rem auto;
+  padding: 1rem;
+  max-width: 500px;
+  justify-content: space-around;
+  display: flex;
+}
+
+.extra div {
+  background-color: white;
+  text-align: center;
+  width: 200px;
+  margin: 0 2rem;
+  padding: 1rem 1.5rem;
+}
+
+input[type="color" i] {
+  width: 115px;
+  height: 35px;
+  border: solid 1px gray;
+  background: none;
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]:hover {
+  border: solid 1px gold;
+}
+
+#sides {
+  color: #333;
+  background-color: rgb(243, 243, 243);
+  border: 1px solid rgb(195, 195, 195);
+  padding: 0.5rem 0.75rem;
+  margin: 0.7rem 5px;
+}
+
+#sides:hover {
+  background-color: rgb(226, 226, 226);
+  cursor: pointer;
+}
+
+#sides:active {
+  background-color: rgb(179, 179, 179);
+}
+
+input[type="number"] {
+  width: 7rem;
+  height: 1.5rem;
+  padding-left: 0.8rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+}
+
 /* ---------- FOOTER ---------- */
 .attributions {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
+  font-weight: bold;
 }
 
 footer {
@@ -52,6 +167,15 @@ footer {
   bottom: 0;
   width: 100%;
   padding: 0.7rem 0 1rem 0;
-  background-color: lightgoldenrodyellow;
+  background-color: goldenrod;
   text-align: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: maroon;
+}
+
+footer a:hover {
+  color: white;
 }
