--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Raleway", sans-serif;
   background-color: #fffef2;
+  margin: 0;
 }
 
 h1 {
@@ -99,7 +100,7 @@ h1 {
 
 .extra {
   font-weight: bold;
-  margin: 3rem auto 6rem auto;
+  margin: 3rem auto;
   padding: 1rem;
   max-width: 500px;
   justify-content: space-around;
@@ -162,11 +163,9 @@ input[type="number"] {
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   padding: 0.7rem 0 1rem 0;
+  margin: 0;
   background-color: goldenrod;
   text-align: center;
 }
